<resources>
    <string name="app_name">einfachkochenmitonkelklaus</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Infoseite</string>
    <string name="content_description_neues_rezept_button">Neues Rezept hinzufügen</string>
    <string name="speichern">Speichern</string>
    <string name="abbruch">Abbruch</string>
    <string name="rezeptname_eingeben">Rezeptname eingeben</string>
    <string name="zubereitung">Zubereitung</string>
    <string name="zutaten">Zutaten</string>
    <string name="name">Rezeptname</string>
    <string name="Zutaten">Zutaten</string>
    <string name="Zubereitung">Zubereitung</string>
    <string name="VideoBackBTN">VideoBackBTN</string>
    <string name="RezeptName">Rezeptname</string>
    <string name="ueberschrift">Einfach kochen mit Klaus</string>
    <string name="image_description">lalal</string>
    <string name="refresh">Refresh</string>
    <string name="zur_ck">Zurück</string>
    <string name="i_love_cats">Ich liebe Katzen</string>
    <string name="textview">no text</string>
    <string name="info">Katzenhaar…mir schmeckts</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="chat">Chat</string>
    <string name="logout">Logout</string>
    <string name="tip">TIP</string>
    <string name="_vom_prifi">Tip vom Prifi</string>
    <string name="video_hinzufügen">Videolink von Youtube einfügen</string>
    <string name="rezept_l_schen">Rezept löschen</string>
    <string name="vorspeisen">Vorspeisen</string>
    <string name="Hauptgang">Hauptspeisen</string>
    <string name="Hauptspeisen">Hauptspeisen</string>
    <string name="s_es">Süßes</string>
    <string name="alftext" translatable="false">Interresantes über mein Lieblingsessen</string>
    <string name="long_text" translatable="false">Die ungarndeutsche Küche ist ein wunderbares Ergebnis der kulturellen Vermischung, die durch die Begegnung von Menschen und Traditionen entstand. Stell dir vor, wie sich deutsche Siedler im 18. Jahrhundert auf den Weg machten, um in das schöne Ungarn zu ziehen. Sie brachten ihre köstlichen Rezepte, ihre Liebe zum Kochen und ihre Essgewohnheiten mit.

In ihren neuen Lebensräumen integrierten sie die Aromen und Zutaten Ungarns, wie das berühmte Paprika und das herzhafte Gulasch. Das brachte eine aufregende neue Dimension in ihre bereits vielfältige kulinarische Welt. Die ungarndeutsche Küche wurde zu einem bunten Mosaik aus deutschen Klassikern, regionalen Eigenheiten und den charmanten Nuancen der ungarischen Gastronomie.

Denk an frisch gebackenes Brot und saftige Wurstwaren, perfekt zubereitete Knödel und deftige Fleischgerichte, die den Duft von Gemütlichkeit und Tradition verbreiten. Und die süßen Köstlichkeiten! Kuchen, Torten und Plätzchen, die die Herzen höherschlagen lassen, besonders zu besonderen Anlässen.

Es ist eine Küche, die von der Liebe zur Familie, zur Natur und zu den Freuden des Essens geprägt ist. Ein harmonischer Tanz aus verschiedenen Aromen, der Generationen überdauert hat und noch heute Menschen zusammenbringt, um zu genießen und zu feiern.

Die genaue Geschichte meiner Familie spiegelt die Reise vieler ungarndeutscher Familien wider. Ursprünglich aus Tschechien kommend, wurden sie nach dem Zweiten Weltkrieg aus ihrer Heimat vertrieben. Auf der Suche nach einem neuen Zuhause begaben sie sich auf eine Zugreise in die Mainaue in Wertheim, Deutschland. Dort wurden sie in Notquartieren untergebracht.

Bereits in ihrer ursprünglichen Heimat waren sie mit einer reichen kulinarischen Tradition vertraut, die sie mit sich brachten. Während ihrer Zeit in Ungarn hatten sie die Möglichkeit, die Aromen und kulinarischen Köstlichkeiten der ungarischen Küche zu erleben und zu integrieren. Nach ihrer Rückkehr nach Deutschland behielten sie diese vielfältigen kulinarischen Einflüsse bei und brachten sie in die Bestenheider Gemeinschaft ein.

Im Bestenheider Industrie-Gebiet, in Nachbarschaft der neuen Glasindustrie in Bestenheid, fanden viele der Vertriebenen aus Ungarn, Polen und der Tschechoslowakei ein neues Zuhause. Die enge Verbindung zwischen der Ansiedlung der Vertriebenen und der florierenden Glasindustrie zeigt die Geschichte und die Veränderungen, die diese Region erlebte.

Die "Glashütten-Siedlung", die in den 1950er Jahren errichtet wurde, symbolisiert nicht nur eine neue Heimat für die Vertriebenen, sondern auch eine Verschmelzung von Kulturen und Traditionen. Heute ist dieses Gebiet Sitz einer bedeutenden glaserzeugenden und glasverarbeitenden Industrie, die weltweit Produkte exportiert. Diese Geschichte spiegelt die Reise und Anpassungsfähigkeit meiner Familie und vieler anderer wider, die durch Kriege und politische Umbrüche gezwungen wurden, ihre Heimat zu verlassen und in neuen Gemeinschaften Fuß zu fassen</string>

</resources>