<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NeuesRezeptFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/kategorie"
        app:layout_constraintBottom_toTopOf="@+id/nameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UnknownId">

        <AutoCompleteTextView
            android:id="@+id/categoryET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:dropDownHeight="200dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/RezeptSpeichernBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/speichern"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AbbruchBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/abbruch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="29dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="142dp"
        android:layout_height="20dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/zutatenET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/zutatenET"
        android:layout_width="257dp"
        android:layout_height="57dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Zutaten"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/zubereitungET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/zubereitungET"
        android:layout_width="259dp"
        android:layout_height="50dp"
        android:layout_marginBottom="388dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Zubereitung"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/zutatenET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/zutatenET"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/erstellerET"
        android:layout_width="259dp"
        android:layout_height="50dp"
        android:layout_marginBottom="340dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Ersteller"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/zutatenET"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/zutatenET"
        tools:ignore="LabelFor" />

    <VideoView
        android:id="@+id/videoView2"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toStartOf="@+id/videoHinzuFügen"
        app:layout_constraintTop_toTopOf="@+id/zubereitungET" />

    <EditText
        android:id="@+id/videoHinzuFügen"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/video_hinzufügen"
        android:inputType="text"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zubereitungET"
        app:layout_constraintVertical_bias="0.318" />



</androidx.constraintlayout.widget.ConstraintLayout>