<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:navGraph="@navigation/nav_graph"
    tools:context=".ui.TipFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ItemFragment">

        <!-- Your existing UI components -->

        <ImageView
            android:id="@+id/tipBTN"
            android:layout_width="403dp"
            android:layout_height="659dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/ede9aab6043917b249a4aec7abc0ea5e"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="9dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/itemRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/videoView3"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textViewCV3"
            android:layout_width="196dp"
            android:layout_height="133dp"
            android:layout_marginTop="164dp"
            android:rotationX="-19"
            android:rotationY="9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.703"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/refreshBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TIP !"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/videoView3"
            app:layout_constraintTop_toTopOf="@+id/videoView3" />

        <Button
            android:id="@+id/tipbackBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zur_ck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/videoView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/videoView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="136dp"
            android:layout_height="164dp"
            android:src="@mipmap/ic_launcher"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <VideoView
            android:id="@+id/videoView3"
            android:layout_width="173dp"
            android:layout_height="152dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tipBTN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/alftext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Other UI components or views as needed -->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>